tests/ui/generic-const-items/wfcheck_err_leak_issue_118179.stderr
error[E0770]: the type of const parameters must not depend on other generic parameters
  --> $DIR/wfcheck_err_leak_issue_118179.rs:4:26
   |
LL | struct G<T, const N: Vec<T>>(T);
   |                          ^ the type must not depend on the parameter `T`

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0770`.
